--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+h1, legend {
+    color: coral;
+}
+
 body{
     /* background: url(http://aws-cf.ados.fr/prod/articles/7/0/2/8088702/4762168/big-476216842e.jpg?v=4); */
 	background-size: 100%;
@@ -15,8 +19,13 @@ img {
     /* adding spacing between each button*/
     margin: 3px;
     background-color: #999999;
-    border-color: #fff;
+    border-color: white;
+    color: white;
 }
+#addStock, #validStock {
+    background-color: limegreen;
+}
+
 .buttonsView {
     width: 100%;
     border-bottom: #999999 solid 1px;
@@ -28,16 +37,19 @@ img {
     /* float: left; */
     margin: 3px;
 }
+
+#stockButtonsView {
+    margin-left: -20px;
+}
+
 .container {
-	background-color: #fff;
-	opacity: 0.8;
+	background-color: white;	
     padding: 20px;
     width: 100%;
     overflow: visible;
-    /* height: 100%; */
 }
 .container2 {
-	background-color: #fff;
+	background-color: white;
 	opacity: 0.8;
     padding: 20px;
     width: 100%;
@@ -50,14 +62,6 @@ img {
     text-align: center;
 }
 
-.footer {
-    position: sticky;
-    bottom: 0;
-    width: 100%;
-    height: 60px;
-    line-height: 60px;
-    background-color: #f5f5f5;
-}
 .card-body
 {
     overflow: none;
